fix/article dropdown invisible

--- a/client/src/components/PresentationsItem.scss
+++ b/client/src/components/PresentationsItem.scss
@@ -11,7 +11,6 @@
         text-align: left;
         padding: 0 .5rem;
         margin-bottom: 0;
-        overflow: hidden;
         @media (max-width: 1200px) {
             height: 4rem;
         }
